[gd_scene load_steps=13 format=2]

[ext_resource path="res://Images/Buildings/Dad'sShop/DadsShop_Inside.png" type="Texture" id=1]
[ext_resource path="res://Scenes/FunctionalScenes/DoorwayArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Buildings/DadsShopWorld.gd" type="Script" id=3]
[ext_resource path="res://Images/Buildings/Dad'sShop/DadsShop_InsideTopLayer.png" type="Texture" id=4]
[ext_resource path="res://Images/Buildings/Dad'sShop/DadsShop_RoomInsideTopLayer.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Buildings/DadsShop.gd" type="Script" id=6]
[ext_resource path="res://Images/Buildings/Dad'sShop/DadsShop_RoomInside.png" type="Texture" id=7]
[ext_resource path="res://Images/Buildings/Dad'sShop/DadsShop_RoomExterior.png" type="Texture" id=8]
[ext_resource path="res://Images/Buildings/Dad'sShop/DadsShop_DoorPost.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Characters/BaseCharacterAdult/Father.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Buildings/MechandComputer.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 525.923, 50.9141 )

[node name="DadsShop" type="Node2D"]
script = ExtResource( 3 )

[node name="DadsShop" type="StaticBody2D" parent="."]
collision_layer = 8
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DadsShop"]
position = Vector2( -1.54053, 169.481 )
z_index = 1
polygon = PoolVector2Array( -70.2136, 1112.22, 1636.92, 1116.84, 2039.06, 1056.75, 2039.06, 850.291, 2658.43, 848.75, 2883.38, 782.499, 2852.56, -212.818, -1657.17, -249.179, -2499.96, 801.604, -2495.33, 1068.15, -929.945, 1071.23, -926.863, 941.811, -2341.88, 949.514, -1626.36, -46.4178, 813.865, -38.8833, 818.482, 14.903, 870.867, 116.592, 1226.78, 118.132, 1228.32, -39.0229, 2084.75, -41.1642, 2211.55, 410.955, 2513.92, 417.266, 2656.89, 845.669, 2610.36, 714.397, 1425.39, 731.798, 1330.15, 443.2, 1114.42, 348.762, 1114.61, 405.018, 1472.06, 948.898, -88.7039, 936.572 )

[node name="Room" type="Node2D" parent="DadsShop"]
position = Vector2( 0, 170 )

[node name="Inside" type="Sprite" parent="DadsShop/Room"]
texture = ExtResource( 7 )

[node name="Inside_TopLayer" type="Sprite" parent="DadsShop/Room"]
texture = ExtResource( 5 )

[node name="Exterior" type="Sprite" parent="DadsShop/Room"]
position = Vector2( -1.54077, 0 )
texture = ExtResource( 8 )

[node name="Position2D" type="Position2D" parent="DadsShop/Room"]
position = Vector2( 1972.3, 250.469 )
__meta__ = {
"_gizmo_extents_": 150.0
}

[node name="Shop" type="Node2D" parent="DadsShop"]
position = Vector2( 0, 170 )

[node name="Inside" type="Sprite" parent="DadsShop/Shop"]
texture = ExtResource( 1 )

[node name="DoorPost" type="Sprite" parent="DadsShop/Shop"]
texture = ExtResource( 9 )

[node name="Inside_TopLayer" type="Sprite" parent="DadsShop/Shop"]
z_index = 1
texture = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="DadsShop/Shop"]
position = Vector2( -544.043, 723.449 )
__meta__ = {
"_gizmo_extents_": 150.0
}

[node name="Tween" type="Tween" parent="DadsShop"]
playback_process_mode = 0

[node name="RoomDoorway" parent="DadsShop" instance=ExtResource( 2 )]
position = Vector2( 1004.56, 365.023 )
rotation = 1.22173

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -597.741, 1226.94 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 63.6329, -5.4856 )
z_index = 2
shape = SubResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Father" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 434.456, 770.087 )

[node name="StaticBody2D" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( -165.478, 227.493 )

[connection signal="doorway_used" from="DadsShop/RoomDoorway" to="DadsShop" method="_on_RoomDoorway_doorway_used"]
[connection signal="one_entered" from="DadsShop/RoomDoorway" to="DadsShop" method="_on_RoomDoorway_one_entered"]
[connection signal="two_entered" from="DadsShop/RoomDoorway" to="DadsShop" method="_on_RoomDoorway_two_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
